added header elements to top-half

--- a/source/weather.html
+++ b/source/weather.html
@@ -13,6 +13,12 @@
 
   <body>
 	  <top-half>
+		  <header>
+			  <p>Local Weather Six Hour Forecast</p>
+		  </header>
+		  <h2>
+			  <p>Northern California with doppler reader</p>
+		  </h2>
 	  </top-half>
 
 	  <bottom-half>
