attempt at adding input field and submit button; current issues with alignment

--- a/source/weather.html
+++ b/source/weather.html
@@ -28,8 +28,19 @@
 		  </h2>
 		  
 		  <div class="forecast">
-			  <label>Forecast for</label>
-			  <input type="text">
+			  <div class="forecast-text">
+			  	  <p>Forecast for</p>
+			  </div>
+			  
+			  <div class="container">
+				  <div>
+					  <input type="text" class="input-mobile" name="Davis, CA">
+				  </div>
+				  <div>
+				  	  <button type="button" class="button-style" onclick="submit()" id="button">submit</button>
+				  </div>
+			  </div>
+	
 		  </div>
 	  </top-half>
 
