added api call and some bckend Js work

--- a/source/weather.html
+++ b/source/weather.html
@@ -34,10 +34,10 @@
 			  
 			  <div class="container">
 				  <div>
-					  <input type="text" class="input-mobile" name="Davis, CA">
+					  <input type="text" class="input-mobile" name="Davis, CA" id = "locationInputField">
 				  </div>
 				  <div>
-				  	  <button type="button" class="button-style" onclick="submit()" id="button">submit</button>
+				  	  <button type="button" class="button-style" onclick="onSubmitClick()" id="button">submit</button>
 				  </div>
 			  </div>
 	
