--- a/source/weather.html
+++ b/source/weather.html
@@ -33,12 +33,7 @@
 			  </div>
 			  
 			  <div class="container">
-				  <div>
-					  <input type="text" class="input-mobile" name="Davis, CA" id = "locationInputField">
-				  </div>
-				  <div>
-				  	  <button type="button" class="button-style" onclick="onSubmitClick()" id="button">submit</button>
-				  </div>
+				  <input type="text" class="input-mobile" name="Davis, CA" id = "locationInputField"><input type="submit" class="button-style" onclick="onSubmitClick()" id="button">
 			  </div>
 	
 		  </div>
