added structure for weather image, temp data, and doppler view

--- a/source/weather.html
+++ b/source/weather.html
@@ -35,7 +35,17 @@
 			  <div class="container">
 				  <input type="text" class="input-mobile" name="Davis, CA" id = "locationInputField"><input type="submit" class="button-style" onclick="onSubmitClick()" id="button">
 			  </div>
-	
+			  <div class="weather-and-doppler-container">
+				  <div class="weather">
+					  <img class="fewclouds-day" src="../assets/fewclouds-day.svg" alt="fewclouds-day" />
+					  <p>placeholder for temp data</p>
+				  </div>
+				  <div class="doppler">
+					  <p>placeholder; this textshould not appear on mobile view</p>
+				  </div>
+			  </div>
+
+
 		  </div>
 	  </top-half>
 
