Finished top-half skeleton; image, time, and weather just need js functionality

--- a/source/weather.html
+++ b/source/weather.html
@@ -38,14 +38,19 @@
 			  <div class="weather-and-doppler-container">
 				  <div class="weather">
 					  <img class="fewclouds-day" src="../assets/fewclouds-day.svg" alt="fewclouds-day" />
-					  <p>placeholder for temp data</p>
+					  <div class="time-and-temp">
+						  <div class="time">
+							  <p>current</p>
+							  <p>12PM</p>
+						  </div>
+						  <label class="vertical-line">|</label>
+						  <label class="temperature">67°</label>
+					  </div>
 				  </div>
 				  <div class="doppler">
 					  <p>placeholder; this textshould not appear on mobile view</p>
 				  </div>
 			  </div>
-
-
 		  </div>
 	  </top-half>
 
