changed fonts to use % or em values; cleaned up styling code

--- a/source/weather.html
+++ b/source/weather.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,300" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100, 200, 300,500" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100, 200, 300, 500" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="weather.css">
   </head>
@@ -24,7 +24,7 @@
 		  </header>
 
 		  <h2>
-			  <p>Northern California with doppler reader</p>
+			  Northern California with doppler radar
 		  </h2>
 		  
 		  <div class="forecast">
@@ -32,8 +32,9 @@
 			  	  <p>Forecast for</p>
 			  </div>
 			  
-			  <div class="container">
-				  <input type="text" class="input-mobile" name="Davis, CA" id = "locationInputField"><input type="submit" class="button-style" onclick="onSubmitClick()" id="button">
+			  <div class="input-container">
+				  <input type="text" class="input-mobile" name="Davis, CA" id = "locationInputField">
+				  <button class="button-style" onclick="onSubmitClick()" id="button">submit</button>
 			  </div>
 			  <div class="weather-and-doppler-container">
 				  <div class="weather">
