prepared placeholder bottom-half for animation swiping test

--- a/source/weather.html
+++ b/source/weather.html
@@ -57,10 +57,24 @@
 		<div class="arrow-container">
 			<img class="arrow-img" src="../assets/upArrow.svg" alt="up arrow">
 		</div>
-		
 	</top-half>
 	
 	<bottom-half>
+
+		<div class="arrow-container">
+			<img class="arrow-img" src="../assets/downArrow.svg" alt="up arrow">
+		</div>
+		
+		<p>Why hello there</p>
+		<hr>
+		<p>Why hello there</p>
+		<hr>
+		<p>Why hello there</p>
+		<hr>
+		<p>Why hello there</p>
+		<hr>
+		<p>Why hello there</p>
+		<hr>
 	</bottom-half>
 	
 	<main></main>
