finished bottom-half mobile mockup

--- a/source/weather.html
+++ b/source/weather.html
@@ -65,16 +65,35 @@
 			<img class="arrow-img" src="../assets/downArrow.svg" alt="up arrow" onclick="onDownArrowClick()">
 		</div>
 		
-		<p>Why hello there</p>
+        <div class="bottom-item">
+            <label class="bottom-item-time">1:00 pm</label>
+            <img class="bottom-item-image" src="../assets/scatteredclouds.svg" alt="few clouds day">
+            <label class="bottom-item-temperature">67°</label>
+        </div>
 		<hr>
-		<p>Why hello there</p>
-		<hr>
-		<p>Why hello there</p>
-		<hr>
-		<p>Why hello there</p>
-		<hr>
-		<p>Why hello there</p>
-		<hr>
+        <div class="bottom-item">
+            <label class="bottom-item-time">2:00 pm</label>
+            <img class="bottom-item-image" src="../assets/showerrain.svg" alt="few clouds day">
+            <label class="bottom-item-temperature">68°</label>
+        </div>
+        <hr>
+        <div class="bottom-item">
+            <label class="bottom-item-time">3:00 pm</label>
+            <img class="bottom-item-image" src="../assets/fewclouds-day.svg" alt="few clouds day">
+            <label class="bottom-item-temperature">70°</label>
+        </div>
+        <hr>
+        <div class="bottom-item">
+            <label class="bottom-item-time">4:00 pm</label>
+            <img class="bottom-item-image" src="../assets/clearsky.svg" alt="few clouds day">
+            <label class="bottom-item-temperature">70°</label>
+        </div>
+        <hr>
+        <div class="bottom-item">
+            <label class="bottom-item-time">5:00 pm</label>
+            <img class="bottom-item-image" src="../assets/clearsky.svg" alt="few clouds day">
+            <label class="bottom-item-temperature">70°</label>
+        </div>
 	</div>
 	
 	<main></main>
