reformatted tablet view CSS portion; renamed css class "fewclouds-day" to "current-image"

--- a/source/weather.html
+++ b/source/weather.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="weather-and-doppler-container">
 				<div class="weather">
-					<img class="fewclouds-day" src="../assets/fewclouds-day.svg" alt="fewclouds-day" />
+					<img class="current-image" src="../assets/fewclouds-day.svg" alt="fewclouds-day" />
 					<div class="time-and-temp">
 						<div class="time">
 							<p>current</p>
