--- a/source/weather.html
+++ b/source/weather.html
@@ -38,14 +38,14 @@
 			</div>
 			<div class="weather-and-doppler-container">
 				<div class="weather">
-					<img class="current-image" src="../assets/fewclouds-day.svg" alt="fewclouds-day" />
+					<img class="current-image" id = "image-0" src="../assets/fewclouds-day.svg" alt="fewclouds-day" />
 					<div class="time-and-temp">
 						<div class="time">
 							<p>current</p>
-							<p>12PM</p>
+							<p id = "time-0">12PM</p>
 						</div>
 						<label class="vertical-line">|</label>
-						<label class="temperature">67°</label>
+						<label class="temperature" id = "temp-0">67°</label>
 					</div>
 				</div>
 				<div class="doppler">
@@ -66,33 +66,33 @@
 		</div>
 		
         <div class="bottom-item">
-            <label class="bottom-item-time">1:00 pm</label>
-            <img class="bottom-item-image" src="../assets/scatteredclouds.svg" alt="few clouds day">
-            <label class="bottom-item-temperature">67°</label>
+            <label class="bottom-item-time" id = "time-1">1:00 pm</label>
+            <img class="bottom-item-image" id = "image-1" src="../assets/scatteredclouds.svg" alt="few clouds day">
+            <label class="bottom-item-temperature" id = "temp-1">67°</label>
         </div>
 		<hr>
         <div class="bottom-item">
-            <label class="bottom-item-time">2:00 pm</label>
-            <img class="bottom-item-image" src="../assets/showerrain.svg" alt="few clouds day">
-            <label class="bottom-item-temperature">68°</label>
+            <label class="bottom-item-time" id = "time-2">2:00 pm</label>
+            <img class="bottom-item-image" id = "image-2" src="../assets/showerrain.svg" alt="few clouds day">
+            <label class="bottom-item-temperature" id = "temp-2">68°</label>
         </div>
         <hr>
         <div class="bottom-item">
-            <label class="bottom-item-time">3:00 pm</label>
-            <img class="bottom-item-image" src="../assets/fewclouds-day.svg" alt="few clouds day">
-            <label class="bottom-item-temperature">70°</label>
+            <label class="bottom-item-time" id = "time-3">3:00 pm</label>
+            <img class="bottom-item-image" id = "image-3" src="../assets/fewclouds-day.svg" alt="few clouds day">
+            <label class="bottom-item-temperature" id = "temp-3">70°</label>
         </div>
         <hr>
         <div class="bottom-item">
-            <label class="bottom-item-time">4:00 pm</label>
-            <img class="bottom-item-image" src="../assets/clearsky.svg" alt="few clouds day">
-            <label class="bottom-item-temperature">70°</label>
+            <label class="bottom-item-time" id = "time-4">4:00 pm</label>
+            <img class="bottom-item-image" id = "image-4" src="../assets/clearsky.svg" alt="few clouds day">
+            <label class="bottom-item-temperature" id = "temp-4">70°</label>
         </div>
         <hr>
         <div class="bottom-item">
-            <label class="bottom-item-time">5:00 pm</label>
-            <img class="bottom-item-image" src="../assets/clearsky.svg" alt="few clouds day">
-            <label class="bottom-item-temperature">70°</label>
+            <label class="bottom-item-time" id = "time-5">5:00 pm</label>
+            <img class="bottom-item-image" id = "image-5" src="../assets/clearsky.svg" alt="few clouds day">
+            <label class="bottom-item-temperature" id = "temp-5">70°</label>
         </div>
 	</div>
 	
