Pre-loaded input field with "Davis, CA" at init

--- a/source/weather.html
+++ b/source/weather.html
@@ -31,7 +31,7 @@
 			<div class="forecast-input-container">
 				<p class="forecast-text">Forecast for</p>
 				<div class="input-container">
-					<input type="text" class="input-field" name="Davis, CA" id = "locationInputField">
+					<input type="text" value="Davis, CA" class="input-field" name="Davis, CA" id = "locationInputField">
 					<button class="button-style" onclick="onSubmitClick()" id="button">submit</button>
 				</div>
 			</div>
