Mostly finished tablet view; kind of breaks at a few widths for now

--- a/source/weather.html
+++ b/source/weather.html
@@ -38,7 +38,7 @@
 	
 			<div class="weather-and-doppler-container">
 				<div class="weather">
-					<img class="current-image" id = "image-0" src="../assets/fewclouds-day.svg" alt="fewclouds-day" />
+					<img class="current-image" id = "image-0" src="../assets/fewclouds-day.svg" alt="current image" />
 					<div class="time-and-temp">
 						<div class="time">
 							<p>current</p>
@@ -67,31 +67,31 @@
 		
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-1">1:00 pm</label>
-            <img class="bottom-item-image" id = "image-1" src="../assets/scatteredclouds.svg" alt="few clouds day">
+            <img class="bottom-item-image" id = "image-1" src="../assets/scatteredclouds.svg" alt="time-1-image">
             <label class="bottom-item-temperature" id = "temp-1">67°</label>
         </div>
 		<hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-2">2:00 pm</label>
-            <img class="bottom-item-image" id = "image-2" src="../assets/showerrain.svg" alt="few clouds day">
+            <img class="bottom-item-image" id = "image-2" src="../assets/showerrain.svg" alt="time-2-image">
             <label class="bottom-item-temperature" id = "temp-2">68°</label>
         </div>
         <hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-3">3:00 pm</label>
-            <img class="bottom-item-image" id = "image-3" src="../assets/fewclouds-day.svg" alt="few clouds day">
+            <img class="bottom-item-image" id = "image-3" src="../assets/fewclouds-day.svg" alt="time-3-image">
             <label class="bottom-item-temperature" id = "temp-3">70°</label>
         </div>
         <hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-4">4:00 pm</label>
-            <img class="bottom-item-image" id = "image-4" src="../assets/clearsky.svg" alt="few clouds day">
+            <img class="bottom-item-image" id = "image-4" src="../assets/clearsky.svg" alt="time-4-image">
             <label class="bottom-item-temperature" id = "temp-4">70°</label>
         </div>
         <hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-5">5:00 pm</label>
-            <img class="bottom-item-image" id = "image-5" src="../assets/clearsky.svg" alt="few clouds day">
+            <img class="bottom-item-image" id = "image-5" src="../assets/clearsky.svg" alt="time-5-image">
             <label class="bottom-item-temperature" id = "temp-5">70°</label>
         </div>
 	</div>
