--- a/source/weather.html
+++ b/source/weather.html
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 				<div class="doppler">
-					<img class="doppler" src="https://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg">
+					<img class="doppler" id = "doppler" src="https://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg">
 				</div>
 			</div>
 		</div>
