--- a/source/weather.html
+++ b/source/weather.html
@@ -49,7 +49,10 @@
 					</div>
 				</div>
 				<div class="doppler">
-					<img class="doppler" id = "doppler-dax" src="https://radar.weather.gov/ridge/RadarImg/N0R/DAX_N0R_0.gif ">
+						<img  id = "doppler-dax" class="doppler" src="http://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg">
+					<img  id= "doppler-dax" class="doppler-gif" src="http://radar.weather.gov/ridge/Overlays/Cities/Short/DAX_City_Short.gif">
+					<img  id = "doppler-dax" class="doppler-gif"  src="https://radar.weather.gov/ridge/RadarImg/N0R/DAX_N0R_0.gif">
+				
 				</div>
 			</div>
 		</div>
