--- a/source/weather.html
+++ b/source/weather.html
@@ -33,7 +33,7 @@
                 <div class="forecast-input-container">
                     <p class="forecast-text">Forecast for</p>
                     <div class="input-container">
-                        <input type="text" value="Davis, CA" class="input-field" name="Davis, CA" id = "locationInputField">
+                        <input type="text" placeholder="Davis, CA" class="input-field" name="Davis, CA" id = "locationInputField">
                         <button class="button-style" onclick="onSubmitClick()" id="button">submit</button>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
 			<div class="forecast-input-container">
 				<p class="forecast-text">Forecast for</p>
 				<div class="input-container">
-					<input type="text" value="Davis, CA" class="input-field" name="Davis, CA" id = "locationInputField">
+					<input type="text" placeholder="Davis, CA" class="input-field" name="Davis, CA" id = "locationInputField">
 					<button class="button-style" onclick="onSubmitClick()" id="button">submit</button>
 				</div>
 			</div>
