--- a/source/weather.html
+++ b/source/weather.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<title>Norcal Weather</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,300" rel="stylesheet">
@@ -39,7 +40,7 @@
 			<div class="weather-and-doppler-container">
 				<div class="weather">
 					
-					<img class="current-image" id = "image-0" src="../assets/fewclouds-day.svg" alt="current image" />
+					<img class="current-image" id = "image-0" src="../assets/fewclouds-day.svg" alt="IMG Not found" />
 					<div class="time-and-temp">
 						<div class="time">
 							<p>current</p>
@@ -50,9 +51,9 @@
 					</div>
 				</div>
 				<div class="doppler">
-					<img class="doppler" src="http://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg">
-					<img  id = "doppler-dax" class="doppler-gif"  src="">
-					<img class="doppler-gif" src="http://radar.weather.gov/ridge/Overlays/Cities/Short/DAX_City_Short.gif">
+					<img class="doppler" src="http://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg" alt="IMG Not found">
+					<img  id = "doppler-dax" class="doppler-gif"  src="" alt="IMG Not found">
+					<img class="doppler-gif" src="http://radar.weather.gov/ridge/Overlays/Cities/Short/DAX_City_Short.gif" alt="IMG Not found">
 				</div>
 			</div>
 		</div>
