--- a/source/weather.html
+++ b/source/weather.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,300" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100, 200, 300, 500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,200,300,500" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="weather.css">
 </head>
@@ -52,7 +52,7 @@
 				</div>
 				<div class="doppler">
 					<img class="doppler" src="http://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg" alt="IMG Not found">
-					<img  id = "doppler-dax" class="doppler-gif"  src="" alt="IMG Not found">
+					<img  id = "doppler-dax" class="doppler-gif"  src="https://radar.weather.gov/ridge/RadarImg/N0R/DAX_N0R_0.gif" alt="IMG Not found">
 					<img class="doppler-gif" src="http://radar.weather.gov/ridge/Overlays/Cities/Short/DAX_City_Short.gif" alt="IMG Not found">
 				</div>
 			</div>
