--- a/source/weather.html
+++ b/source/weather.html
@@ -59,14 +59,14 @@
 		</div>
 	
 		<div class="arrow-container">
-			<img class="arrow-img" src="../assets/upArrow.svg" alt="up arrow" onclick="onUpArrowClick()">
+			<img class="arrow-img" src="upArrow.svg" alt="up arrow" onclick="onUpArrowClick()">
 		</div>
 	</div>
 	
 	<div class="bottom-half" id="bottomHalf">
 	
 		<div class="arrow-container">
-			<img class="arrow-img" src="../assets/downArrow.svg" alt="up arrow" onclick="onDownArrowClick()">
+			<img class="arrow-img" src="downArrow.svg" alt="up arrow" onclick="onDownArrowClick()">
 		</div>
 		
         <div class="bottom-item">
