Moved assets folder into public directory.

--- a/server/public/weather.html
+++ b/server/public/weather.html
@@ -40,7 +40,7 @@
 			<div class="weather-and-doppler-container">
 				<div class="weather">
 					
-					<img class="current-image" id = "image-0" src="../assets/fewclouds-day.svg" alt="IMG Not found" />
+					<img class="current-image" id = "image-0" src="assets/clearsky.svg" alt="IMG Not found" />
 					<div class="time-and-temp">
 						<div class="time">
 							<p>current</p>
@@ -51,9 +51,9 @@
 					</div>
 				</div>
 				<div class="doppler">
-					<img class="doppler" src="http://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg" alt="IMG Not found">
+					<img class="doppler" src="https://radar.weather.gov/ridge/Overlays/Topo/Short/DAX_Topo_Short.jpg" alt="IMG Not found">
 					<img  id = "doppler-dax" class="doppler-gif"  src="https://radar.weather.gov/ridge/RadarImg/N0R/DAX_N0R_0.gif" alt="IMG Not found">
-					<img class="doppler-gif" src="http://radar.weather.gov/ridge/Overlays/Cities/Short/DAX_City_Short.gif" alt="IMG Not found">
+					<img class="doppler-gif" src="https://radar.weather.gov/ridge/Overlays/Cities/Short/DAX_City_Short.gif" alt="IMG Not found">
 				</div>
 			</div>
 		</div>
@@ -71,31 +71,31 @@
 		
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-1">1:00 pm</label>
-            <img class="bottom-item-image" id = "image-1" src="../assets/scatteredclouds.svg" alt="time-1-image">
+            <img class="bottom-item-image" id = "image-1" src="assets/scatteredclouds.svg" alt="time-1-image">
             <label class="bottom-item-temperature" id = "temp-1">67°</label>
         </div>
 		<hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-2">2:00 pm</label>
-            <img class="bottom-item-image" id = "image-2" src="../assets/showerrain.svg" alt="time-2-image">
+            <img class="bottom-item-image" id = "image-2" src="assets/showerrain.svg" alt="time-2-image">
             <label class="bottom-item-temperature" id = "temp-2">68°</label>
         </div>
         <hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-3">3:00 pm</label>
-            <img class="bottom-item-image" id = "image-3" src="../assets/fewclouds-day.svg" alt="time-3-image">
+            <img class="bottom-item-image" id = "image-3" src="assets/fewclouds-day.svg" alt="time-3-image">
             <label class="bottom-item-temperature" id = "temp-3">70°</label>
         </div>
         <hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-4">4:00 pm</label>
-            <img class="bottom-item-image" id = "image-4" src="../assets/clearsky.svg" alt="time-4-image">
+            <img class="bottom-item-image" id = "image-4" src="assets/clearsky.svg" alt="time-4-image">
             <label class="bottom-item-temperature" id = "temp-4">70°</label>
         </div>
         <hr>
         <div class="bottom-item">
             <label class="bottom-item-time" id = "time-5">5:00 pm</label>
-            <img class="bottom-item-image" id = "image-5" src="../assets/clearsky.svg" alt="time-5-image">
+            <img class="bottom-item-image" id = "image-5" src="assets/clearsky.svg" alt="time-5-image">
             <label class="bottom-item-temperature" id = "temp-5">70°</label>
         </div>
 	</div>
